--- a/grilli-master/index.html
+++ b/grilli-master/index.html
@@ -9,8 +9,8 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Grilli - Amazing & Delicious Food</title>
-  <meta name="title" content="Grilli - Amazing & Delicious Food">
+  <title>KOVELA - Amazing & Delicious Food</title>
+  <meta name="title" content="KOVELA - Amazing & Delicious Food">
   <meta name="description" content="This is a Restaurant html template made by codewithsadee">
 
   <!-- 
@@ -67,7 +67,7 @@
         </div>
 
         <span class="span">
-          Restaurant St, Delicious City, London 9578, UK
+          Nairobi St, Nairobi City, Kenya 9578, 
         </span>
       </address>
 
@@ -86,7 +86,7 @@
           <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">+1 123 456 7890</span>
+        <span class="span">+254 123 456 7890</span>
       </a>
 
       <div class="separator"></div>
@@ -96,7 +96,7 @@
           <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
         </div>
 
-        <span class="span">booking@restaurant.com</span>
+        <span class="span">booking@lovelarestaurant.com</span>
       </a>
 
     </div>
@@ -114,7 +114,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo.svg" width="160" height="50" alt="Grilli - Home">
+        <img src="./assets/images/logo.svg" width="160" height="50" alt="kovela - Home">
       </a>
 
       <nav class="navbar" data-navbar>
@@ -124,7 +124,7 @@
         </button>
 
         <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" width="160" height="50" alt="Grilli - Home">
+          <img src="./assets/images/logo.svg" width="160" height="50" alt="kovela - Home">
         </a>
 
         <ul class="navbar-list">
@@ -175,20 +175,20 @@
           <p class="headline-1 navbar-title">Visit Us</p>
 
           <address class="body-4">
-            Restaurant St, Delicious City, <br>
-            London 9578, UK
+            Nairobi St, Nairobi City, <br>
+            Kenya 9578, KE
           </address>
 
           <p class="body-4 navbar-text">Open: 9.30 am - 2.30pm</p>
 
-          <a href="mailto:booking@grilli.com" class="body-4 sidebar-link">booking@grilli.com</a>
+          <a href="mailto:booking@kovela.com" class="body-4 sidebar-link">booking@kovela.com</a>
 
           <div class="separator"></div>
 
           <p class="contact-label">Booking Request</p>
 
-          <a href="tel:+88123123456" class="body-1 contact-number hover-underline">
-            +88-123-123456
+          <a href="tel:+254123123456" class="body-1 contact-number hover-underline">
+            +-254-123456
           </a>
         </div>
 
@@ -445,7 +445,7 @@
 
             <div class="contact-label">Book Through Call</div>
 
-            <a href="tel:+804001234567" class="body-1 contact-number hover-underline">+80 (400) 123 4567</a>
+            <a href="tel:+2544001234567" class="body-1 contact-number hover-underline">+254 123 4567</a>
 
             <a href="#" class="btn btn-primary">
               <span class="text text-1">Read More</span>
@@ -1091,12 +1091,12 @@
           </a>
 
           <address class="body-4">
-            Restaurant St, Delicious City, London 9578, UK
+            Nairobi St, Nairobi City, Kenya 9578, KE
           </address>
 
-          <a href="mailto:booking@grilli.com" class="body-4 contact-link">booking@grilli.com</a>
+          <a href="mailto:booking@kovela.com" class="body-4 contact-link">booking@kovela.com</a>
 
-          <a href="tel:+88123123456" class="body-4 contact-link">Booking Request : +88-123-123456</a>
+          <a href="tel:+254123123456" class="body-4 contact-link">Booking Request : +254-123-123456</a>
 
           <p class="body-4">
             Open : 09:00 am - 01:00 pm
@@ -1183,8 +1183,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2022 Grilli. All Rights Reserved | Crafted by <a href="https://github.com/codewithsadee"
-            target="_blank" class="link">codewithsadee</a>
+          &copy; 2022 KOVELA. All Rights Reserved | Crafted by KOVELA
         </p>
 
       </div>
